[gd_scene load_steps=6 format=3 uid="uid://dgxxgt8cldy53"]

[ext_resource type="PackedScene" uid="uid://da8hoochj8m1u" path="res://player.tscn" id="1_kgp33"]
[ext_resource type="Script" path="res://main.gd" id="1_om4ol"]
[ext_resource type="PackedScene" uid="uid://8yhwbxbujhk0" path="res://hud.tscn" id="3_pw42s"]
[ext_resource type="PackedScene" uid="uid://1nww5b4qwdqn" path="res://sound.tscn" id="4_25gnf"]

[sub_resource type="Curve2D" id="Curve2D_n73p4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_om4ol")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.524551, 0.866327, 0.755262, 1)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_n73p4")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Player" parent="." instance=ExtResource("1_kgp33")]

[node name="HUD" parent="." instance=ExtResource("3_pw42s")]

[node name="Sound" parent="." instance=ExtResource("4_25gnf")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
